# MinecraftVersions.py

./: README.md  pyproject.toml  setup.py
minecraftVersions/: __init__.py  utils.py
src/minecraftVersions/: __init__.py  utils.py
