[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraftVersions"
version = "1.0.0"
authors = [
  { name="tungdo0602" },
]
description = "A simple minecraft version wrapper written in python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/tungdo0602/MinecraftVersions.py"
"Bug Tracker" = "https://github.com/tungdo0602/MinecraftVersions.py/issues"